added figures on wbo variance

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -33,7 +33,7 @@ destroying a bond's chemical environment by naively removing an important remote
 and torsion scan for this bond (see **A** and **C**) are reflective of a conjugated bond. **[C]** Relative QC energy as a function of
 torsion angle of the central bond. The colors of the QC scan corresponds to the highlighted bonds in **A**. **[D]** Relative MM
 energy as a function of torsion angle of the central bond. The colors in the MM scan correspond to the highlighted bonds in **A**.
-[E]** Torsion barrier heights vs WBOs. The color of the data points correspond to the highlighted bonds in **A**.
+**[E]** Torsion barrier heights vs WBOs. The color of the data points correspond to the highlighted bonds in **A**.
 The QC torsion barrier height is linear WBO.](images/figure_3.svg){#fig:biphenyls}
 
 ### The Wiberg Bond Order quantifies the electronic population overlap between two atoms and captures bond conjugation
@@ -45,27 +45,6 @@ occupied atomic orbitals on atoms A and B
 
 \begin{equation} W_{AB} = \sum_{\mu\in A}\sum_{\nu\in B} P^2_{\mu\nu} \end{equation}
 
-To check how well $W_{AB}$ recapitulates the multiplicity of bonds, we calculated $W_{AB}$ from AM1 calculations 
-for all bonds in a set of molecules shown in SI. The distribution in figure @fig:wbo_dists corresponds
-closely with bond multiplicity. The density at ~ 0.7 correspond bonds involving sulfur and phosphorous since these are weaker and longer bonds. The peak at 1.0
-corresponds to C-H and C-C bonds, the peak close to 1.5 corresponds to bonds in aromatic rings, the peak close to 2.0 corresponds
-to double bonds, and finally the triple bonds form the last peak. Figures @fig:wbo_dists B and D seperate out different kinds of bonds
-to more clearly illustrate what the WBO captures. Figure @fig:wbo_dists B shows carbon - carbon bonds not in rings (blue) and bonds in rings (pink).
-The carbon - carbon distribution has distinct peaks at one, two and three corresponding to single, double and triple bonds. There is also a smaller
-peak at 1.5 that corresponds to conjugated bonds. The pink distribution includes bonds in rings and has a peak at one and 1.5 which corresponds to aliphatic
-and aromatic rings, respectively. Figure @fig:wbo_dists D shows distrbutions with bonds that have nitrogens (blue) and oxygens (pink). The peaks occur at
-the expected values; 1, 1.5 and 3 for nitrogen which corresponds to single, conjugated and triple bonds and 1 and 2 for oxygens which correspond to
-single and carbonyl bonds.
-
-![**Distribution of WBO in drug-like molecules have peaks at expected values**
-**[A]** The distribution of all WBOs for all bonds in molecules in set. The peak at one, close to two and close to thres correspond to
-single, double and triple bonds. the density between one and two correspond to aromatic and conjugated bonds. The peak at ~0.7 correspond
-to bonds that include sulfur and phosphorous which are longer, weaker bonds. **[B]** The blue distribution includes carbon - carbon bonds that
-are not in rings. The peaks at one, two and three correspond to single, double and triple bonds. The pink distribution include bonds that are in rings.
-The peak at one corresponds to single bonds and the density between one and 1.5 are aromatics. **[C]** The blue distribution includes bonds that have
-either one or two nitrogen. Many of these bonds are conjugated as demonstrated by the density around 1.5. The density at three corresponds to
-cyano groups. The pink distribution include bonds that have oxygens. The peak at two corresponds to carbonyls.](images/figure-2.svg){#fig:wbo_dists}
-
 The Wiberg bond order assumes atomic orbitals (AOs) are orthonormal. In ab initio calculations, however, AOs are not
 orthogonal but the WBO can be calculated via Löwdin normalization [@doi:10.1063/1.1747632; @doi:10/bdfk5f] which is how it is calculated in Psi4.
 
@@ -76,67 +55,110 @@ the WBO (fig @fig:biphenyls E), the relationship is linear with an $R^2$ of 0.97
 ### The WBO is an inexpensive surrogate for the chemical environment around a bond
 Since the WBO can be calculated from a cheap AM1 calculation, is indicative of a bond's conjugation, and is correlated with torsion energy
 barrier height, it is an attractive measure to use as a surrogate when automating fragmentation or interpolating torsion force constants. However,
-WBOs are conformational dependent [@doi:10.1039/c6ra17055b] so we investigated this dependence to understand if WBOs
+WBOs are conformational dependent [@doi:10.1039/c6ra17055b; @doi:10.1021/ja00029a005] so we investigated this dependence to understand if WBOs
 will be a robust descriptor. In addition, we also investigated the generality of the torsion energy barrier and WBO linear relationship.
 In this section we will first discuss our findings and solution to the conformational dependency and then discuss how general the linear relationship is.
 
 #### Conformation dependent variance of WBOs are higher for conjugated bonds
 Since WBOs are a function of the electronic density, which is conformational dependent, WBOs change with conformation. However, not all bonds' WBOs
-change the same way with conformation. We found that WBOs for conjugated bonds are multimodal with respect to conformation and that bonds
+change the same way with conformation. We found that WBOs for conjugated bonds have higher variance with respect to conformation and that bonds
 involved in conjugated systems have WBOs that are correlated with each other.
 
+![**Variance and correlations of Wiberg bond order distributions with respect to conformations are higher for conjugated bonds**
+**[A]** Gefitinib, with its rotatable bonds highlighted and numbered to correspond with figures B and C.
+**[B]** WBO distributions over 232 conformations of the highlighted, rotatable bonds. The colors of the distributions correspond to
+the colors in the highlighted bonds in A. The variance and their 95% confidence interval are shown on the left (with exponent base of 1E-5).
+The single non conjugated bonds (blue, (10, 11), red (11, 12), and olive (12, 13)) have lower variance than conjugated bonds (yellow (3, 2),
+purple (8, 9), orange (9, 10), grey (23, 19), and green(24, 24)).
+**[C]** Correlation plot of WBOs every bond in Gefitinib against WBOs of all other bonds over 232 conformations. The white lines indicate ring systems.
+Bonds in conjugated systems have higher correlations between their WBOs (see the aromatic ring systems in the two lower right diagonal squares).
+Both bonds (23, 19) (grey) and (24, 23) (green) have WBOs that are correlated with their neighboring ring systems, but
+bond (23, 19) are more correlated with the ring systems than the green bond (24, 23).
+**[D]** Resonance structures of Gefitinib illustrates why the grey bond (23, 19) has higher variance than the green bond (24, 23) even if
+both bonds are conjugated. When the double bond is on bond (23, 19), the negative charge is on a nitrogen which is the more stable form, vs
+the resonance structure where the double bond is on (24, 23) with the negative charge on a carbon.
+**[E]** The conformations of the molecule for the highest WBO and lowest in the distribution. The mode with higher WBOs has bond
+(23, 19) in plane with quinazoline which allows for stronger conjugation while the mode with lower WBOs has the bond out of plane
+so there is less electron population overlap in out of plane conformation.](images/figure-4.svg){#fig:wbo_var_corr}
+
 To investigate how WBOs change with conformation, we used Omega [@doi:10.1021/ci100031x] to generate
-conformers for a set of kinase inhibitors [Supplementary figure 1] and calculated the Lowdin-Wiberg bond order for each conformation from an
-hf3c [@doi:10/f42979] geometry optimized calculation using Psi4 [@doi:10.1021/acs.jctc.7b00174].Omega is a knowledge-based
+conformers for a set of kinase inhibitors [hold for SI] and calculated the Lowdin-Wiberg bond order for each conformation from a
+B3LYP-D3(BJ) / DZVP [@doi:10.1139/v92-079; @doi:10.1063/1.464913; @doi:10.1063/1.3382344; @doi:10.1002/jcc.21759] geometry optimized calculation
+using Psi4 [@doi:10.1021/acs.jctc.7b00174]. Omega is a knowledge-based
 conformer generator that uses a modified version of MMFF94s [@doi:10/brxdg7] to score conformations. It has been shown to accurately reproduce experimentally
-observed crystallography conformers in the Platinum benchmark dataset [@doi:10.1021/acs.jcim.7b00505]. Figure 4 illustrates
-the results for Gefitinib [Figure 4A], a representative molecule. Figure 4B shows the distribution of WBOs for all rotatable bonds
-color coded with the colors used to highlight the bonds in Gefitinib [Fig 4A]. Single carbon-carbon bonds, and carbon-nitrogen bonds
-formed by atoms numbered 10 - 13 are freely rotating. This is reflected by the tight distribution of WBOs around 1.00 for those bonds.
-The bonds involving the ether oxygens and aromatic rings (formed by atoms numbered 1-3, 8-10, 19, 23-24) exhibit higher variance
-and multimodality. It is interesting to note the difference in the WBOs for the conjugated bonds formed by the nitrogen between
+observed crystallography conformers in the Platinum benchmark dataset [@doi:10.1021/acs.jcim.7b00505]. Figure @fig:wbo_var_corr illustrates
+the results for Gefitinib (@fig:wbo_var_corr, A), a representative molecule. Figure @fig:wbo_var_corr, B shows the distribution of WBOs for all rotatable bonds
+color coded with the colors used to highlight the bonds in Gefitinib (@fig:wbo_var_corr, A). Single carbon-carbon bonds, and carbon-nitrogen bonds
+formed by atoms numbered 10 - 13 are freely rotating. This is reflected by the tighter distribution (lower variance) of WBOs around closer to one for those bonds.
+The bonds involving the ether oxygens and aromatic rings (formed by atoms numbered 1-3, 8-10, 19, 23-24) exhibit higher variance. It is interesting to note the
+difference in the WBOs for the conjugated bonds formed by the nitrogen between
 the quinazoline and chloro fluro phenyl (bonds formed by atoms numbered 19, 23 and 23, 24). Both of these bonds are conjugated
-with their neighboring ring systems, however, While the distribution of WBOs for bond 19-23
-(the purple distribution) is clearly bimodal, the WBO distribution for bond 23-24 has lower variance. This is in agreement
-with the resonance structures shown in figure 4D. The resonance strictures that have the double bond on the bond closer to
+with their neighboring ring systems, however, While the distribution of WBOs for bond 23-19
+(the grey distribution) has two modes clear modes of almost equal weights, the WBO distribution for bond 24-23 has lower variance. This is in agreement
+with the resonance structures shown in figure @fig:wbo_var_corr. The resonance strictures that have the double bond on the bond closer to
 the quinazoline (bond 19-23) are more stable because the negative charge is on a nitrogen. When the double bond is on the neighboring
 23-24 bond, the negative charge is on an aromatic carbon which is less stable. The results are similar for other kinase inhibitors
-tested shown in supplementary figure 1. In addition, when we inspected the conformations associated with each mode in the purple distribution [figure 4B]
-we found that conformations with lower WBOs on bond 19-23 had that bond out of plane while the conformations in the higher mode of the distribution
-had the bond in plane which allows conjugation. We found similar results from WBOs calculated form QC torsion scans. Fig 2D shows the Lowdin-Wiberg
-bond order for each point in the QC torsion scans of the biphenyl zwitterion. The WBOs are perfectly anti-correlated with the torsion potential energy
-which is in line with chemical intuition. Conjugation stabilizes conformations and leads to more electronic population overlap in bonds [CITE].
+tested shown in [hold for SI]. In addition, when we inspected the conformations associated with the highest and lowest WBO in the grey distribution (fig @fig:wbo_var_corr, E)
+we found that conformations with lowest WBO on bond 19-23 had that bond out of plane while the conformation with the highest WBO value
+had the bond in plane which allows conjugation. We found similar results from WBOs calculated form QC torsion scans. Fig @fig:sub_phenyl_qc_scan shows Lowdin-Wiberg
+bond order for each point in the QC corresponding torsion scans. The WBOs are anti-correlated with the torsion potential energy
+which is in line with chemical intuition. Conjugation stabilizes conformations and leads to more electronic population overlap in bonds [@doi:10.1351/pac198961040635].
 At higher energy conformers, the aromatic rings are out of plan and cannot conjugate. Therefore the WBO is lower for those conformers. At lower energy
-conformations, the rings are in plane and can conjugate so the WBO is higher.
+conformations, the rings are in plane and can conjugate so the WBO is higher. We found that the trends discusses above are similar when using semi-empirical methods
+such as AM1 and HF3C (hold for SI)
 
 #### Bonds in conjugated systems have highly correlated conformation-dependent WBOs
-We found that certain bond orders are strongly correlated or anticorrelated with each other, indicating strong electronic coupling.
-Figure 4C shows the Pearson correlation coefficient for each bond WBO distribution against all other bond WBO distributions.
+We found that certain bond orders are strongly correlated or anti-correlated with each other, indicating strong electronic coupling.
+Figure @fig:wbo_var_corr C shows the Pearson correlation coefficient for each bond WBO distribution against all other bond WBO distributions.
 There is a clear structure in this correlation plot. The square formed by bonds from atoms 24-29 shows that the alternating
-bonds in the aromatic ring are strongly anticorrelated with each other. While the ring formed by atoms 13-18 also exhibit this
-trend, the absolute Pearson correlation coefficients are not as high given that it is not an aromatic ring. The bonds involved
-in the ethers (atoms 1-3 adn 8-10) are strongly correlated with each other and also correlated to the quinazoline, albeit not as strongly.
+bonds in the aromatic ring (25-29) are strongly anti-correlated with each other. This trend is different in the ring formed by atoms 13-18
+which is not aromatic. In this ring, bonds 13-18, 13-14, 16-15 and 16-17 (which involve electron rich atoms O and N) have Pearson correlation coefficients with absolute values higher than
+for the other bonds in the ring, but lower than the bonds in the aromtic ring. The bonds involved
+in the methoxy groups (atoms 1-3 and 8-10) are correlated with each other and also correlated to the quinazoline, albeit not as strongly.
 And the bonds between the chloro fluoro phenyl and quinazoline follow the same trend as their WBO distribution and resonance structures.
 The bond closer to the quinazoline (bond 23-19) has WBO distribution correlated with the quinazoline while the bond closer to the
-chloro fluoro phenyl (bond 23-24) is not as strongly coupled with the quinazoline or phenyl ring. The results are similar
-for other kinase inhibitors tested as shown in supplementary figure 1
+chloro fluoro phenyl (bond 23-24) is not as strongly coupled with the quinazoline. The trends are similar
+for other kinase inhibitors tested as shown in (hold for SI).
 
 #### ELF10 provides a useful way to capture informative conformation-independent WBOs
+
+![**Standard deviations of conformation dependent WBO distributions are smaller than standard deviations of WBO distribution of the same bond in different chemical environments**
+The distribution of standard deviations of WBO distributions over conformations is shown in blue. The distribution of standard deviations of ELF10 WBO distributions for the same
+bond in different chemical environments is shown in pink. The changes in WBO due to conformations are smaller than the changes in WBO due to chemical changes around the bond.
+The validation set (SI @fig:validation_set), was used to generate these distributions. The blue std distribution was calculated over 140602 WBO dependent distributions (this is the
+number of individual fragments in the dataset). The pink std distribution was calculated over 366 distributions of 366 bonds
+in different chemical environments (of the 140602 fragments)](images/standard_deviations.svg){#fig:standard_deviations}
+
 As we have shown, the WBO is conformation dependent and this dependency can also be highly informative of the electronic coupling
-in a system. Figure 5 shows the distribution of standard deviations of WBO distribution with respect to conformation in blue.
-Most of the standard deviations fall below 0.02, which is encouragingly small. However, it can become computationally expensive to calculate the WBO for all conformations. If we want to
+in a system. Figure @fig:standard_deviations shows the distribution of standard deviations of WBO distributions with respect to conformation in blue.
+Most of the standard deviations fall below 0.03, which is encouragingly small. However, it can become computationally expensive to calculate the WBO for all conformations. If we want to
 use WBOs as a surrogate to determine if our fragment is representative of the parent molecule in a reproducible way,
 we need a way to capture informative conformation-independent WBOs. Electronically Least-interacting Functional groups (ELF) conformation selection implemented in quacpac
-[CITE] resolves the issue of sensitivity of molecular mechanics electrostatic energies from QM derived charges.
+[@url:https://docs.eyesopen.com/applications/quacpac/index.html] resolves the issue of sensitivity of molecular mechanics electrostatic energies from QM derived charges.
+
 [Leave to Christopher Bayly to describe]{.banner .lightyellow}
-This method can also be applied to deriving WBOs that are insensitive to conformers. To test how well ELF10 WBOs correspond to expected
-WBOs, we calculated ELF10 WBOs for the kinase inhibitor set shown in supplementary figure 1. Figure 3A shows the distribution of all ELF WBO. To
-gain insight how the ELF10 WBOs corresponds to bond multiplicity, we separated the distributions by element. Figure 3B shows the distributions
-of carbon-carbon bonds. The blue distribution shows the carbon-carbon bonds not in rings. There are peaks at one, two and three
-which correspond to single, double and triple bonds. Single bonds are the most abundant followed by double and then triple. The blue
-distribution shows carbon-carbon bonds in rings. There is a peak as 1.0 and 1.5 which corresponds to single and aromatic rings.
-Longer, weaker bonds involving Sulfur and Phosphorous  [Fig 3C] both have peaks at ~0.6. Oxygen has a peak at 1.0 and 1.8 which corresponds
-to single and double bonds. For the rest of this section we will be focusing on the robustness and generalizability of ELF10 WBOs.
+
+![**Distribution of WBO in drug-like molecules have peaks at expected values**
+**[A]** The distribution of all WBOs for all bonds in molecules in set. The peak at one, close to two and close to thres correspond to
+single, double and triple bonds. the density between one and two correspond to aromatic and conjugated bonds. The peak at ~0.7 correspond
+to bonds that include sulfur and phosphorous which are longer, weaker bonds. **[B]** The blue distribution includes carbon - carbon bonds that
+are not in rings. The peaks at one, two and three correspond to single, double and triple bonds. The pink distribution include bonds that are in rings.
+The peak at one corresponds to single bonds and the density between one and 1.5 are aromatics. **[C]** The blue distribution includes bonds that have
+either one or two nitrogen. Many of these bonds are conjugated as demonstrated by the density around 1.5. The density at three corresponds to
+cyano groups. The pink distribution include bonds that have oxygens. The peak at two corresponds to carbonyls.](images/figure-2.svg){#fig:wbo_dists}
+
+This method can also be applied to derive WBOs that are insensitive to conformers. To check how well ELF10 estimated $W_{AB}$ recapitulates the multiplicity of bonds,
+we calculated $W_{AB}$ from ELF10 AM1 calculations
+for all bonds in a set of molecules shown in [hold for SI]. The distribution in figure @fig:wbo_dists corresponds
+closely with bond multiplicity. The density at ~ 0.7 correspond bonds involving sulfur and phosphorous since these are weaker and longer bonds. The peak at 1.0
+corresponds to C-H and C-C bonds, the peak close to 1.5 corresponds to bonds in aromatic rings, the peak close to 2.0 corresponds
+to double bonds, and finally the triple bonds form the last peak. Figures @fig:wbo_dists B and D seperate out different kinds of bonds
+to more clearly illustrate what the WBO captures. Figure @fig:wbo_dists B shows carbon - carbon bonds not in rings (blue) and bonds in rings (pink).
+The carbon - carbon distribution has distinct peaks at one, two and three corresponding to single, double and triple bonds. There is also a smaller
+peak at 1.5 that corresponds to conjugated bonds. The pink distribution includes bonds in rings and has a peak at one and 1.5 which corresponds to aliphatic
+and aromatic rings, respectively. Figure @fig:wbo_dists D shows distrbutions with bonds that have nitrogens (blue) and oxygens (pink). The peaks occur at
+the expected values; 1, 1.5 and 3 for nitrogen which corresponds to single, conjugated and triple bonds and 1 and 2 for oxygens which correspond to
+single and carbonyl bonds. For the rest of this section we will be focusing on the robustness and generalizability of ELF10 WBOs.
 
 #### WBOs are a robust signal to how remote substituent changes alter a bond's torsion barrier height
 To investigate how resonance and electronic effects from remote substituents change the torsion energy of a bond,
@@ -147,12 +169,12 @@ The Hammett equation relates meta and para benzoic acid substituents to the acid
 
 Where $\sigma$ is a substituent constant and $\rho$ is a reaction constant. It aims to isolate the resonance and inductive effects
 of substituents from the sterics effects of a reaction. Here, we generated a combinatorial set of meta and para subsituted phenyls
-and pyridine {@fig:subsituted_phenyls}A with 25 functional groups that cover a wide range of electron donating and withdrawing groups.
+and pyridine @fig:subsituted_phenyls A with 25 functional groups that cover a wide range of electron donating and withdrawing groups.
 We then calculated the ELF10 WBO for the bond attaching the functional
-group to the aromatic ring for all functional groups which resulted in 128 (25*3+3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
-defined as a change more than two bonds away, from other effects such as sterics and conformations. The resulting distributions are in {@fig:subsituted_phenyls}B.
+group to the aromatic ring for all functional groups which resulted in 128 (25*5+3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
+defined as a change more than two bonds away, from other effects such as sterics and conformations. The resulting distributions are in figure @fig:subsituted_phenyls, B.
 It is interesting to note that the trend of decreasing WBOs for more electron
-donating groups are anti correlates with increasing Hammett substituent constants. In {fig@subsituted_phenyls}C and D, the AM1 ELF10 WBO of the bond
+donating groups are anti correlates with increasing Hammett substituent constants. In {@fig:ubsituted_phenyls} C and D, the AM1 ELF10 WBO of the bond
 between the functional group and benzoic acid is plotted against their Hammett para and meta substituent constants. Functional groups
 that are more electron donating will have more electron density on the bond attaching the functional group to the benzoic acid. The resonance and/or inductive effect
 destabilize the benzoate, increases its pKa, which corresponds to lower substituent constants.
@@ -166,28 +188,28 @@ carboxyilic acid **[E]** Selected QC torsion scan barrier heights vs ELF10 AM1 W
 
 |functional group | slope | $r^2$ | P value | standard error |
 |---|---|---|---|---|
-| $N(Me)_2$ | 116.916250 | 0.880571 | 0.000019 | 14.352479 |
-| $NHMe$ | 134.517241 |  0.896103 |  0.000033 | 16.194060 |
-| $NH_2$ |   64.266814 |  0.577819 |  0.017438 | 20.763035 |
-| $NHEt$ |  119.513117 |  0.836392 |  0.000552 | 19.978559 |
-| $NH(C_3H_7)$ |  163.763962 |  0.871119 |  0.000236 | 23.808080 |
-| $OH$ |  154.824936 |  0.729133 |  0.003393 | 35.666975 |
-| $OMe$ |  185.309951 |  0.800852 |  0.006494 | 41.326214 |
-| $OEt$ |  119.662499 |  0.479470 |  0.038706 | 47.124984 |
-| $NHCON(Me)_2$ |  159.312781 |  0.579507 |  0.010533 | 47.979491 |
-| $NHCONHMe$ |  127.645256 |  0.434585 |  0.053430 | 55.030363 |
-| $NHCONH_2$ |  238.119990 |  0.734429 |  0.003158 | 54.120536 |
-| $NHCOEt$ |  205.802258 |  0.692740 |  0.005374 | 51.804680 |
-| $NHCOMe$ |  144.320372 |  0.457787 |  0.065376 | 64.121783 |
-| $OCONH_2$ |  172.716947 |  0.508785 |  0.111518 | 84.854215 |
-| $COOH$ |  267.218639 |  0.739937 |  0.061417 | 91.463658 |
-| $COOEt$ |  149.012778 |  0.581298 |  0.077956 | 63.233457 |
-| $NO_2$ |  302.072242 |  0.909174 |  0.003192 | 47.737899 |
+| N(Me)~2~ | 116.916250 | 0.880571 | 0.000019 | 14.352479 |
+| NHMe | 134.517241 |  0.896103 |  0.000033 | 16.194060 |
+| NH~2~ |   64.266814 |  0.577819 |  0.017438 | 20.763035 |
+| NHEt |  119.513117 |  0.836392 |  0.000552 | 19.978559 |
+| NH(C~3~H~7~) |  163.763962 |  0.871119 |  0.000236 | 23.808080 |
+| OH |  154.824936 |  0.729133 |  0.003393 | 35.666975 |
+| OMe |  185.309951 |  0.800852 |  0.006494 | 41.326214 |
+| OEt |  119.662499 |  0.479470 |  0.038706 | 47.124984 |
+| NHCON(Me)~2~ |  159.312781 |  0.579507 |  0.010533 | 47.979491 |
+| NHCONHMe |  127.645256 |  0.434585 |  0.053430 | 55.030363 |
+| NHCONH~2~ |  238.119990 |  0.734429 |  0.003158 | 54.120536 |
+| NHCOEt |  205.802258 |  0.692740 |  0.005374 | 51.804680 |
+| NHCOMe |  144.320372 |  0.457787 |  0.065376 | 64.121783 |
+| OCONH~2~ |  172.716947 |  0.508785 |  0.111518 | 84.854215 |
+| COOH |  267.218639 |  0.739937 |  0.061417 | 91.463658 |
+| COOEt |  149.012778 |  0.581298 |  0.077956 | 63.233457 |
+| NO~2~ |  302.072242 |  0.909174 |  0.003192 | 47.737899 |
 
 Table: slope and associated statistics for torsion barrier height vs WBO for selected functional groups {#tbl:stats}
 
 To investigate how these long range effects observed in the WBOs capture changes in the bonds' torsion potential energy, we ran representative QC torsion
-scans for 17 of the functional groups (SI figure 4). We did not run QC torsion scans for functional groups that either did not have a torsion such
+scans for 17 of the functional groups (hold for SI). We did not run QC torsion scans for functional groups that either did not have a torsion such
 as halogens, were congested such as trimethyl amonium and functional groups where the WBOs did not change by more than 0.01 for different functional
 groups at the meta or para position such as methyl. We chose the representative molecules for the 17 functional groups by sorting them
 by their WBO and selecting molecules with minimum WBO difference of 0.02. All of the resulting QC torsion scans are shown in supplementary
@@ -204,22 +226,22 @@ associated statistics for the fitted lines.
 anti correlated with QC torsion scans **[C]** QC scans for urea in a series of different chemical environment. Both profiles and
 energy barriers change with ELF10 AM1 WBOs **[D]** Löwdin-Wiberg bond orders are not perfectly anti correlated to QC scans](images/figure_7.svg){#fig:sub_phenyl_qc_scan}
 
-For most functional groups, the change in WBOs correspond to changes in torsion barrier heights. [supplementary figure 4].
+For most functional groups, the change in WBOs correspond to changes in torsion barrier heights. [hold for SI].
 However, for some functional groups, the change in WBO does not fully capture the differences in torsion scans because not only do the torsion energy
 barrier heights increase, but the profile changes considerably as shown in {@fig:sub_phenyl_qc_scan}C for urea. Interestingly, the Löwdin-Wiberg
-bond order scans do have the same profiles {@fig:sub_phenyl_qc_scan}D.
+bond order scans do have the same profiles {@fig:sub_phenyl_qc_scan} D.
 
-When we compare the standard deviations of WBO distributions with respect to conformation versus with respect to changes in chemical space [Figure 5 red distribution],
-we find that the changes in ELF10 WBO for remote chemical environment changes are bigger than the changes in WBO that arise from change in conformation.
+When we compare the standard deviations of WBO distributions with respect to conformation versus with respect to changes in chemical space (figure @fig:standard_deviations, pink distribution),
+we find that the changes in ELF10 WBO for remote chemical environment changes are usually bigger than the changes in WBO that arise from change in conformation.
 This allows us to use the difference in ELF10 WBO of parent and fragment as a good surrogate to the level of disruption of the chemical environment.
 
 ### A simple fragmentation scheme can use the WBO to preserve the chemical environment around a torsion
 The WBO is a robust indicator of changes in torsion energy barrier heights for related torsions. Therefore, if a fragment's
 WBO changes too much from its parent WBO at the same bond, the fragmentation is probably inadequate. Using this concept,
-we extended the fragment-and-cap scheme proposed by [CITE Pfizer paper] by considering resonance via WBOs. The scheme, illustrated
+we extended the fragment-and-cap scheme (with slight changes) proposed by [@doi:10.1021/acs.jcim.9b00373] by considering resonance via WBOs. The scheme, illustrated
 in figure 8 is as follows:
 
-1. Find rotatable bond. For this step we use the SMARTS pattern [hold for SMARTS pattern]
+1. Find rotatable bond. For this step we use the SMARTS pattern `[!$(*#*)&!D1]-,=;!@[!$(*#*)&!D1]`. This SMARTS pattern also included double bonds; it only excludes rings.
 2. Build out one bond in each direction
 3. If the next atom is part of a ring or part of a functional group listed in figure 8B, keep the ring and functional group
 4. Keep meta substitutents to the rotatable bond of interest because it is involved in the sterics of the torsion
