--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -57,7 +57,7 @@ the barrier to rotation significantly for the central bond of interest.
 
 In this work, we use the Wiberg Bond Order (WBO) [@doi:10/fvwkkh], which is both simple to calculate
 from semi-empirical QC methods and is sensitive to the chemical environment around a bond. WBOs are correlated with bond
-vibrational frequencies [@doi:10.1021/jp4010345] and is used to predict trigger bonds in high energy-density material
+vibrational frequencies [@doi:10.1021/jp4010345, @doi:10.1351/pac198961040635] and is used to predict trigger bonds in high energy-density material
 because it is correlated with the strength of the bond [@doi:10.1002/cphc.201500773]. Here, we develop an approach 
 that uses the WBO to validate whether a fragmentation scheme corrupts the local chemical environment of interest,
 with a particular focus on fragmentation schemes suitable for QC torsion drives. Our approach uses simple 
