--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -145,7 +145,7 @@ to bonds that include sulfur and phosphorous which are longer, weaker bonds. **[
 are not in rings. The peaks at one, two and three correspond to single, double and triple bonds. The pink distribution include bonds that are in rings.
 The peak at one corresponds to single bonds and the density between one and 1.5 are aromatics. **[C]** The blue distribution includes bonds that have
 either one or two nitrogen. Many of these bonds are conjugated as demonstrated by the density around 1.5. The density at three corresponds to
-cyano groups. The pink distribution include bonds that have oxygens. The peak at two corresponds to carbonyls.](images/figure-2.svg){#fig:wbo_dists}
+nitriles. The pink distribution include bonds that have oxygens. The peak at two corresponds to carbonyls.](images/figure-2.svg){#fig:wbo_dists}
 
 This method can also be applied to derive WBOs that are insensitive to conformers. To check how well ELF10 estimated $W_{AB}$ recapitulates the multiplicity of bonds,
 we calculated $W_{AB}$ from ELF10 AM1 calculations
@@ -241,18 +241,43 @@ WBO changes too much from its parent WBO at the same bond, the fragmentation is 
 we extended the fragment-and-cap scheme (with slight changes) proposed by [@doi:10.1021/acs.jcim.9b00373] by considering resonance via WBOs. The scheme, illustrated
 in figure 8 is as follows:
 
-1. Find rotatable bond. For this step we use the SMARTS pattern `[!$(*#*)&!D1]-,=;!@[!$(*#*)&!D1]`. This SMARTS pattern also included double bonds; it only excludes rings.
-2. Build out one bond in each direction
-3. If the next atom is part of a ring or part of a functional group listed in figure 8B, keep the ring and functional group
-4. Keep meta substitutents to the rotatable bond of interest because it is involved in the sterics of the torsion
-4. Cap with hydrogen and recalculate WBO
+1. Find acyclic bond. For this step we use the SMARTS pattern `[!$(*#*)&!D1]-,=;!@[!$(*#*)&!D1]`.
+2. Keep the four atoms in the torsion quartet and all atoms bonded to those atoms (this ensures that all 1-5 atoms are included in the minimal fragment).
+3. If any of the atoms are part of a ring or functional group shown in table @tbl:fgroups, include ring and functional groups atoms to avoid ring breaking and fragmenting functional groups that contain
+more than one heteroatom.
+4. Keep ortho substitutents to the rotatable bond and the bonds directly bonded to the rotatable bond it is involved in the sterics of the torsion. This rule is slightly different than
+described in [@doi:10.1021/acs.jcim.9b00373].
+5. N, O and S are capped with methyl. All other open valence atoms are capped with hydrogen.
+6. Calculate WBO for fragment.
 5. If the fragment's WBO differs by more than a user defined threshold, continue grow out one bond at a time until the
 fragment's WBO is within the threshold of the parent WBO.
+
+| Chemical group | SMARTS pattern |
+|---|---|
+| azo |`'[NX3][N]='` |
+| nitric oxide | `'[N]-[O]'` |
+| amide |  `'[#7][#6](=[#8])'`, `[#7][#6](-[O-])`|
+| urea | `'[NX3][CX3](=[OX1])[NX3]'` |
+| aldehyde | `'[CX3H1](=O)[#6]'` |
+| sulfoxide | `[#16X3]=[OX1]`, `'[#16X3+][OX1-]'`|
+| sulfonyl | `'[#16X4](=[OX1])=([OX1])'` |
+| sulfinic acid | `'[#16X3](=[OX1])[OX2H,OX1H0-]'` |
+| sulfinamide | `'[#16X4](=[OX1])=([OX1])([NX3R0])'` |
+| sulfonic acid | `'[#16X4](=[OX1])(=[OX1])[OX2H,OX1H0-]'` |
+| phosphine oxide | `'[PX4](=[OX1])([#6])([#6])([#6])'` |
+| phosphonate | `'P(=[OX1])([OX2H,OX1-])([OX2H,OX1-])'` |
+| phosphate | `'[PX4](=[OX1])([#8])([#8])([#8])'` |
+| carboxylic acid | ` '[CX3](=O)[OX1H0-,OX2H1]'` |
+| nitro | `'([NX3+](=O)[O-])'`, `'([NX3](=O)=O)'` |
+| ester | `'[CX3](=O)[OX2H0]'` |
+
+Table: Functional groups that are not fragmented. This list is not comprehensive and users can add their own functional groups they
+do not want to fragment {#tbl:fgroups}
 
 [*(Add discussion on the changes I made to the Pfizer scheme for our minimal fragment before we start building out and why. Add SI figure justifying it)*]{.banner .lightyellow}
 
 ### Fragmentation schemes can be assessed by their ability to preserve the chemical environment while minimizing fragment size
-This fragmentation scheme improves upon Pfizers scheme [CITE], however, it leaves some parameters up to the user. In order to asses various
+This fragmentation scheme improves upon [@doi:10.1021/acs.jcim.9b00373], however, it leaves some parameters up to the user. In order to asses various
 thresholds and different fragmentation schemes in general, we generated a diverse set of FDA-approved drug molecules that can be
 a useful validation set. The goal of this set was to find molecules that are challenging to fragment. In other words, molecules
 that have bonds that are sensitive to remote substituent changes. To find these molecules, we first filtered DrugBank (version 5.1.3 downloaded
@@ -389,7 +414,7 @@ leads us to recommend a distruption threshold of 0.03 for our fragmentation sche
 plots in figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01, 0.03 and 0.05. This scheme  preforms better than other schemes such as the
 scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](figure {@fig:joint_plots}, lower right and table @tbl:benchmark).
 
-|scheme | fragments in lower left quadrant |
+|distruption threshold | fragments in lower left quadrant |
 |---|---|
 | 0.001 | 153 |
 | 0.005 | 197 |
@@ -398,7 +423,7 @@ scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](figure {@fig:joint_plots},
 | 0.05 | 231 |
 | 0.07 | 214 |
 | 0.1 | 200 |
-| Pfizer | 189 |
+| scheme from @doi:10.1021/acs.jcim.9b00373 | 189 |
 
 Table: Number of fragments in the lower left quadrant in figure {@fig:joint_plots} defined as a distance score less than
 0.1 and computational cost less than 10000. {#tbl:benchmark}
@@ -441,7 +466,7 @@ group is removed (figure @fig:chemical_groups, A). The variance of the WBO distr
 relative energies of conformers in the QC torsion scans. In other molecules where phosphates are removed, the variance can
 decrease even if the phosphate group is ten bonds away (figure @fig:failure_modes, F and SI). In figure @fig:chemical_groups, B, removing
 a protonated nitrogen that is double bonded causes the WBO distribution to shift and the variance to increase. Long range effects are seen in
-other molecules with similar chemical patterns up to eight bonds away (SI). Removing a cyano group (fig @fig:chemical_groups, C) and sulfonamide group (@fig:chemical_groups, D)
+other molecules with similar chemical patterns up to eight bonds away (SI). Removing a nitrile group (fig @fig:chemical_groups, C) and sulfonamide group (@fig:chemical_groups, D)
 have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away (SI).
 A protonated nitrogen and deprotonated oxygen (@fig:chemical_groups E and F) can effects bonds between 3-6 bonds away (SI). While the changes in distributions
 for removing a nitro group and sulfur (@fig:chemical_groups, G and H) are not as big as other chemical groups, they are mostly consistent across other molecules in the
